<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@null"
    android:scrollbarTrackVertical="@null"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ui.beranda.transaksi.TransaksiDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/llHeader"
            layout="@layout/base_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"/>



        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@id/flFooter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llHeader">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDataTransaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_data_transaksi_linear"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dataKosong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_95sdp"
                android:background="@drawable/ic_empt_data"
                android:layout_gravity="top|center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                style="@style/MediumTextStyle"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="8dp"
                android:textColor="@color/abuB"
                android:layout_gravity="center|bottom"
                android:text="@string/data_produk_kosong" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/containerTransaksi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/flFooter">

        </androidx.fragment.app.FragmentContainerView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/flFooter"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/abuB"
            app:strokeWidth="1dp"
            app:strokeColor="@color/abuB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RegularTextStyle"
                        android:text="@string/total_bayar"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/totalHarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BoldTextStyle"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:clickable="false"
                        android:textSize="@dimen/_13ssp"
                        android:text="@string/total_harga_arg"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSelanjutnya"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35ssp"
                    android:background="@drawable/rectangle_10r"
                    android:includeFontPadding="false"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_selanjutnya_logo"
                    android:drawablePadding="8dp"
                    android:text="@string/selanjutnya"
                    android:textAllCaps="false"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:layout_gravity="center|end"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBatal"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35ssp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_10r"
                    android:includeFontPadding="false"
                    android:backgroundTint="@color/abuB"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_batal_logo"
                    android:textSize="@dimen/_10ssp"
                    android:drawablePadding="8dp"
                    android:text="@string/batal"
                    android:textAllCaps="false"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:layout_gravity="center|end"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSimpan"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35ssp"
                    android:background="@drawable/rectangle_10r"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:includeFontPadding="false"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:drawableStart="@drawable/ic_simpan_logo"
                    android:drawablePadding="8dp"
                    android:text="@string/simpan"
                    android:textAllCaps="false"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="16dp"/>



            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

