...

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dataProduk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_3sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
...

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/transaksiProduk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_3sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
...
