...
                android:text="0"
                android:textSize="@dimen/_12ssp"
                android:includeFontPadding="false"
                android:textColor="@color/abuB"/>

            <FrameLayout
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
